--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 #body {
     font-family: 'Pacifico', cursive;
-    background-image: url('/images/music1_img.jpg');
+    background-image: url('images/music1_img.jpg');
     background-size: cover;
     /* background-position: center; */
     background-repeat: no-repeat;
